# advent-of-code

./: Cargo.toml  README.md
2023/: justfile
2023/day-1/: Cargo.toml
2024/: Cargo.toml  benchmarks.txt  justfile
2024/daily-template/: Cargo.toml
2024/day-1/benches/: benchmarks.rs
2024/day-1/src/: part1.rs  part2.rs
2024/day-10/: Cargo.toml
2024/day-10/benches/: benchmarks.rs
2024/day-10/src/: part1.rs  part2.rs
2024/day-11/: Cargo.toml
2024/day-11/benches/: benchmarks.rs
2024/day-11/src/: part1.rs  part2.rs
2024/day-12/: Cargo.toml
2024/day-12/benches/: benchmarks.rs
2024/day-12/src/: part1.rs  part2.rs
2024/day-13/: Cargo.toml  input.txt
2024/day-13/benches/: benchmarks.rs
2024/day-13/src/: part1.rs  part2.rs
2024/day-14/: Cargo.toml
2024/day-14/benches/: benchmarks.rs
2024/day-14/src/: part1.rs  part2.rs
2024/day-15/: Cargo.toml
2024/day-15/benches/: benchmarks.rs
2024/day-15/src/: part1.rs  part2.rs
2024/day-2/: Cargo.toml
2024/day-2/benches/: benchmarks.rs
2024/day-2/src/: lib.rs  part1.rs  part2.rs
2024/day-3/: Cargo.toml
2024/day-3/benches/: benchmarks.rs
2024/day-3/src/: lib.rs  part1.rs  part2.rs
2024/day-4/: Cargo.toml
2024/day-4/benches/: benchmarks.rs
2024/day-4/src/: part1.rs  part2.rs
2024/day-5/: Cargo.toml
2024/day-5/benches/: benchmarks.rs
2024/day-5/src/: part1.rs  part2.rs
2024/day-6/: Cargo.toml
2024/day-6/benches/: benchmarks.rs
2024/day-6/src/: lib.rs  (+2 more)
2024/day-7/: Cargo.toml
2024/day-8/: Cargo.toml
2024/day-9/: Cargo.toml
y2023/: Cargo.toml
y2023/d1/: main.rs
(+9 files in other folders)
