[package]
name = "day-11"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools.workspace = true
nom.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
miette.workspace = true
rayon.workspace = true
glam.workspace = true
nom_locate.workspace = true
num-traits = "0.2.14"

[dev-dependencies]
divan.workspace = true
rstest.workspace = true
test-log.workspace = true

[[bench]]
name = "day-11-bench"
path = "benches/benchmarks.rs"
harness = false
